# discord-rust-bot

./: .gitignore  Cargo.toml  start.bat.example
src/: main.rs
